<resources>
    <string name="app_name">TaskMan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TaskMan</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_about">About</string>
    <string name="menu_random">New Ideas</string>
    <string name="menu_credits">Credits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="task_label">Task Name</string>
    <string name="type_label">Type</string>
    <string name="date_label">Due Date</string>
    <string name="completion_label">Completion</string>

    <string name="random_task_label">We couldn\'t find a task that met your criteria.</string>
    <string name="random_type_label">Try changing your settings</string>
    <string name="price_label">Price:</string>
    <string name="difficulty_label">Difficulty:</string>
    <string name="refresh_label">Refresh</string>

    <string-array name="completion_statuses">
        <item>To-do</item>
        <item>In Progress</item>
        <item>Complete!</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="settings_header">Random Task Settings</string>
    <string name="setting1">Preferred Type</string>
    <string name="setting2">Budget</string>
    <string name="setting3">Difficulty</string>

    <string-array name="types">
        <item>All</item>
        <item>Busywork</item>
        <item>Charity</item>
        <item>Cooking</item>
        <item>DIY</item>
        <item>Education</item>
        <item>Music</item>
        <item>Recreational</item>
        <item>Relaxation</item>
        <item>Social</item>
    </string-array>
    <string-array name="type_values">
        <item>all</item>
        <item>busywork</item>
        <item>charity</item>
        <item>cooking</item>
        <item>diy</item>
        <item>education</item>
        <item>music</item>
        <item>recreational</item>
        <item>relaxation</item>
        <item>social</item>
    </string-array>


    <!-- Credits strings -->
    <string name="programmer_label">Programmed By:</string>
    <string name="programmer">Noah Burrows</string>
    <string name="provider_label">Images Provided By:</string>
    <string name="provider"><u>Unsplash.com</u></string>
    <string name="api_label">Random Tasks Provided By:</string>
    <string name="api"><u>Bored API</u></string>
    <string name="fonts_label">Fonts Provided By:</string>
    <string name="fonts"><u>1001freefonts.com</u></string>

    <string name="support_label">For support with this app, email Noah at:</string>
    <string name="support"><u>w0772238@myscc.ca</u></string>
</resources>