<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp"
    tools:context=".Fragments.CreditsFragment">

    <TextView
        android:id="@+id/programmerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/programmer"
        android:textSize="24sp"
        android:padding="5sp"
        android:text="@string/programmer_label"
        android:fontFamily="@font/montserrat_bold"/>

    <TextView
        android:id="@+id/programmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:padding="7sp"
        android:text="@string/programmer"
        android:fontFamily="@font/raleway_bold"/>

    <TextView
        android:id="@+id/providerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/provider"
        android:textSize="24sp"
        android:padding="5sp"
        android:text="@string/provider_label"
        android:fontFamily="@font/montserrat_bold"/>

    <TextView
        android:id="@+id/provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:padding="7sp"
        android:textColor="@color/link_blue"
        android:text="@string/provider"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/apiLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/api"
        android:textSize="24sp"
        android:padding="5sp"
        android:text="@string/api_label"
        android:fontFamily="@font/montserrat_bold"/>

    <TextView
        android:id="@+id/api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:padding="7sp"
        android:textColor="@color/link_blue"
        android:text="@string/api"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/fontsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/fonts"
        android:textSize="24sp"
        android:padding="5sp"
        android:text="@string/fonts_label"
        android:fontFamily="@font/montserrat_bold"/>

    <TextView
        android:id="@+id/fonts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:padding="7sp"
        android:textColor="@color/link_blue"
        android:text="@string/fonts"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/supportLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/support"
        android:textSize="20sp"
        android:padding="5sp"
        android:text="@string/support_label"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:padding="5sp"
        android:textColor="@color/link_blue"
        android:text="@string/support" />

</LinearLayout>