<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.taskman.Fragments.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />
    <fragment
        android:id="@+id/nav_random"
        android:name="com.example.taskman.Fragments.RandomFragment"
        android:label="@string/menu_random"
        tools:layout="@layout/fragment_random" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.taskman.Fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_create_update"
        android:name="com.example.taskman.Fragments.CreateUpdateFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_create_update" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.taskman.Fragments.SettingsFragment"
        android:label="SettingsFragment" />
    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.taskman.Fragments.CreditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />
</navigation>