<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".Fragments.CreateUpdateFragment">

    <ImageView
        android:id="@+id/taskImageSelect"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_menu_camera" />


    <!-- Added textboxes to input task info-->
    <TextView
        android:id="@+id/taskTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/taskTitle"
        android:text="@string/task_label"
        android:fontFamily="@font/montserrat_regular"/>

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/taskTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/taskType"
        android:text="@string/type_label"
        android:fontFamily="@font/montserrat_regular"/>

    <EditText
        android:id="@+id/taskType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/dueDate"
        android:text="@string/date_label"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="None"
        android:fontFamily="@font/montserrat_regular"/>

    <Button
        android:id="@+id/dueDateButton"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="Set Due Date"
        android:fontFamily="@font/montserrat_regular"/>

    <Button
        android:id="@+id/reminderButton"
        android:layout_height="wrap_content"
        android:text="Set Reminder"
        android:fontFamily="@font/montserrat_regular"
        android:enabled="false"/>

    <TextView
        android:id="@+id/completionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/completionBox"
        android:text="@string/completion_label"
        android:fontFamily="@font/montserrat_regular"/>

    <Spinner
        android:id="@+id/completionBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="Submit"
        android:fontFamily="@font/montserrat_regular"/>



</GridLayout>
</ScrollView>